# Ci_Residual

./: CMakeLists.txt  CipherRunner.cpp  CipherRunner.h  ResidualPlot.cpp  ResidualPlot.h  ResultPlot.cpp  ResultPlot.h  main.cpp  mainwindow.cpp  mainwindow.h  setting.cpp  setting.h  temp.txt  temp3.txt  temp4.txt  temp5.txt  temp6.txt  temp7.txt  text2.txt  thread.txt
resource/: MainWindow.ui  MainWindow.ui:Zone.Identifier  resource.qrc
ui_show/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PreMainWindow.ui  main.cpp  ui_PreMainWindow.h
